added padding for eval

--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -23,6 +23,7 @@ DATALOADER:
   SENSOR: 'planetscope'
   INCLUDE_ALPHA: False
   TRAINING_MULTIPLIER: 100
+  PAD_BORDERS: True
 
 AUGMENTATION:
   CROP_SIZE: 256
