--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -24,6 +24,7 @@ DATALOADER:
   INCLUDE_ALPHA: False
   TRAINING_MULTIPLIER: 100
   PAD_BORDERS: True
+  TIMESERIES_LENGTH: 5
 
 AUGMENTATION:
   CROP_SIZE: 256
