--- a/configs/espnetl1b.yaml
+++ b/configs/espnetl1b.yaml
@@ -4,7 +4,7 @@ TRAINER:
   BATCH_SIZE: 1
 
 MODEL:
-  TYPE: 'esp_net'
+  TYPE: 'espnetl1b'
 
 DATALOADER:
-  TIMESERIES_LENGTH: 3
+  TIMESERIES_LENGTH: 5
