--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -24,7 +24,8 @@ DATALOADER:
   INCLUDE_ALPHA: False
   TRAINING_MULTIPLIER: 100
   PAD_BORDERS: True
-  TIMESERIES_LENGTH: 1
+  TRAIN_TIMESERIES_LENGTH: 1
+  EVAL_TIMESERIES_LENGTH: 1
 
 AUGMENTATION:
   CROP_SIZE: 256
