--- a/configs/lunet.yaml
+++ b/configs/lunet.yaml
@@ -1,4 +1,11 @@
 _BASE_: "base.yaml"
 
+TRAINER:
+  BATCH_SIZE: 4
+
 MODEL:
   TYPE: 'lunet'
+
+DATALOADER:
+  TRAIN_TIMESERIES_LENGTH: 5
+  EVAL_TIMESERIES_LENGTH: 5
