--- a/configs/debug.yaml
+++ b/configs/debug.yaml
@@ -1,9 +1,9 @@
-_BASE_: "unet.yaml"
+_BASE_: "lunet.yaml"
 DEBUG: True
 
 TRAINER:
   BATCH_SIZE: 2
 
 DATALOADER:
-  TRAIN_TIMESERIES_LENGTH: 5
-  EVAL_TIMESERIES_LENGTH: 5
+  TRAIN_TIMESERIES_LENGTH: 2
+  EVAL_TIMESERIES_LENGTH: 2
