deep walk in the forest

--- a/configs/debug.yaml
+++ b/configs/debug.yaml
@@ -1,9 +1,9 @@
-_BASE_: "unet_gamma.yaml"
+_BASE_: "segformer.yaml"
 DEBUG: True
 
 TRAINER:
-  BATCH_SIZE: 2
+  BATCH_SIZE: 1
 
 DATALOADER:
-  TRAIN_TIMESERIES_LENGTH: 2
-  EVAL_TIMESERIES_LENGTH: 2
+  TRAIN_TIMESERIES_LENGTH: 1
+  EVAL_TIMESERIES_LENGTH: 1
