--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -25,8 +25,7 @@ DATALOADER:
   INCLUDE_ALPHA: False
   TRAINING_MULTIPLIER: 100
   PAD_BORDERS: True
-  TRAIN_TIMESERIES_LENGTH: 5
-  EVAL_TIMESERIES_LENGTH: 5
+  TIMESERIES_LENGTH: 5
 
 AUGMENTATION:
   CROP_SIZE: 256
