--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -15,7 +15,13 @@ MODEL:
   IN_CHANNELS: 3
   OUT_CHANNELS: 1
   LOSS_TYPE: 'PowerJaccardLoss'
-  TOPOLOGY: [64, 128,]
+  TOPOLOGY: [64, 128, 256, 512,]
+  TRANSFORMER_PARAMS:
+    N_LAYERS: 2
+    N_HEADS: 3
+    D_MODEL: 192
+    PATCH_SIZE: 8
+    ACTIVATION: 'gelu'
 
 DATALOADER:
   NUM_WORKER: 4
