--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -12,10 +12,12 @@ TRAINER:
 
 MODEL:
   TYPE: 'unet'
+
   IN_CHANNELS: 3
   OUT_CHANNELS: 1
   LOSS_TYPE: 'PowerJaccardLoss'
-  TOPOLOGY: [64, 128, 256, 512,]
+  TOPOLOGY: [64, 128,]
+  TRANSFORMER: False
   TRANSFORMER_PARAMS:
     N_LAYERS: 2
     N_HEADS: 3
