temp cons training

--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -12,10 +12,10 @@ TRAINER:
 
 MODEL:
   TYPE: 'unet'
-
   IN_CHANNELS: 3
   OUT_CHANNELS: 1
   LOSS_TYPE: 'PowerJaccardLoss'
+  CONS_LOSS_TYPE: 'ConsLoss'
   TOPOLOGY: [64, 128,]
   TRANSFORMER: False
   TRANSFORMER_PARAMS:
