--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -34,6 +34,7 @@ DATALOADER:
   TRAINING_MULTIPLIER: 100
   PAD_BORDERS: True
   TIMESERIES_LENGTH: 5
+  LABEL_TYPE: 'segmentation'
 
 AUGMENTATION:
   CROP_SIZE: 256
