--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -8,16 +8,15 @@ TRAINER:
   EPOCHS: 100
   OPTIMIZER: 'adamw'
   PATIENCE: 5
-  LAMBDA: 1
+  LAMBDA: 0
 
 MODEL:
   TYPE: 'unet'
-  TASK: 'segmentation'
   IN_CHANNELS: 3
   OUT_CHANNELS: 1
   LOSS_TYPE: 'PowerJaccardLoss'
   CONS_LOSS_TYPE: 'ConsLoss'
-  TOPOLOGY: [64, 128,]
+  TOPOLOGY: [64, 128, 256, 512,]
   TRANSFORMER: False
   TRANSFORMER_PARAMS:
     N_LAYERS: 2
@@ -35,6 +34,7 @@ DATALOADER:
   TRAINING_MULTIPLIER: 100
   PAD_BORDERS: True
   TIMESERIES_LENGTH: 5
+  INCLUDE_CHANGE_LABEL: False
 
 AUGMENTATION:
   CROP_SIZE: 256
