--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -25,6 +25,7 @@ MODEL:
     PATCH_SIZE: 8
     ACTIVATION: 'gelu'
   MAP_FROM_CHANGES: False
+  ADJACENT_CHANGES: True
 
 DATALOADER:
   NUM_WORKER: 4
