--- a/configs/debug.yaml
+++ b/configs/debug.yaml
@@ -1,4 +1,4 @@
-_BASE_: "unetouttransformer_v2.yaml"
+_BASE_: "unetformer_v2.yaml"
 DEBUG: True
 
 TRAINER:
@@ -11,4 +11,5 @@ DATALOADER:
   TIMESERIES_LENGTH: 5
 
 AUGMENTATION:
-  CROP_SIZE: 16
+  CROP_SIZE: 64
+  IMAGE_OVERSAMPLING_TYPE: 'change'
