feature cons loss

--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -17,6 +17,7 @@ MODEL:
   LOSS_TYPE: 'PowerJaccardLoss'
   CONS_LOSS_TYPE: 'ConsLoss'
   TOPOLOGY: [64, 128, 256, 512,]
+  DISABLE_OUTCONV: False
   TRANSFORMER: False
   TRANSFORMER_PARAMS:
     N_LAYERS: 2
