--- a/configs/unetouttransformer_v4_os.yaml
+++ b/configs/unetouttransformer_v4_os.yaml
@@ -1,7 +1,7 @@
 _BASE_: "base.yaml"
 
 MODEL:
-  TYPE: 'unetouttransformereverything'
+  TYPE: 'unetouttransformerv4'
   TRANSFORMER: True
   TRANSFORMER_PARAMS:
     N_HEADS: 2
