--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -39,6 +39,7 @@ DATALOADER:
   PAD_BORDERS: True
   TIMESERIES_LENGTH: 5
   INCLUDE_CHANGE_LABEL: False
+  EVAL_TRAIN_THRESHOLD: 0.75
 
 AUGMENTATION:
   CROP_SIZE: 64
